--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-Django >= 5.1.7
-django-extensions >= 3.2.3
-python-dotenv >= 1.1.0
-pillow >= 11.1.0
+Django              >= 5.1.7
+django-extensions   >= 3.2.3
+python-dotenv       >= 1.1.0
+pillow              >= 11.1.0
+factory_boy         >= 3.3.3
+numpy               >= 2.3.1
